deploy/apps/api/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: api
      containers:
        - name: api
          image: localhost:5001/api:0.0.1
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - name: http-api
              containerPort: 8080
