deploy/apps/api/base/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-vs
spec:
  gateways:
    - istio-gateway/playground-local-gateway
  hosts:
    - "api.playground.local"
  http:
    - route:
        - destination:
            host: api
            port:
              number: 80
          weight: 100
